tools/tests/errors/surf_cont_12.ki
# assignment to an out-of-range list index
var a = [1, 2, 3]
a[10] = 5
